

                          avrtest NEWS
                          ============

* Fixed wrong H flag computation in SUB and SUBI.                2025-03-03

* exit.o now sets stdin as a stream reading via                  2025-02-08
  avrtest_getchar().

* avrtest.h now works with -mint8.                               2024-06-12
  Notice that an -mint8 programm must be terminated with
  some abort flavour or with avrtest_exit.  Returning from
  main or using [__builtin_]exit will only return an 8-bit
  value, but the library functions are expecting a 16-bit
  exit value.

* Support syscalls LOG_FMT_F7T etc. to log libgcc's              2024-06-10
  internal IEEE double representation.

* Support syscalls like                                    r339  2023-11-14

      long double avrtest_sinl (long double);
      long double avrtest_mull (long double, long double);

  to help with IEEE double implementation.  For a
  complete list of functions, see README sections
  "IEEE single emulation" and "IEEE double emulation".
  There are also versions for float like:

      float avrtest_sinf (float);
      float avrtest_mulf (float, float);

* Use flash size from section .note.gnu.avr.deviceinfo     r338  2023-10-01
  provided by startup-code from AVR-LibC in crt<mcu>.o.

* Support -mmcu=avr2, avr25, avr3, avr31, avr35,           r337  2023-09-30
  avr4, avr5 and avrxmega2 for convenience.  They
  are basically aliases of already existing cores.

* Support logging of values (syscalls 7 and 8) also        r335  2023-09-23
  in avrtest.

* Support -mmcu=avrxmega4 for XMEGA devices with           r331  2023-09-21
  a 2-byte PC and with .rodata in RAM.

* Calls like fputc (c, stderr) now write to the            r326  2023-09-12
  host's stderr stream.

  Support a new syscall avrtest_putchar_stderr (int)
  that writes a character to stderr on the host.

  A new command line option -no-stderr has been added
  that (works similar to -no-stdout and) suppresses